--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,22 +1,25 @@
 :root {
+  /* TODO - Set up universal Color Vars */
+  --background: #242424;
+  --primary-text: #fff;
+  --primary-grey: #999;
+  --primary-slate: rgba(255, 255, 255, 0.1);
+  --primary-button: rgba(76, 175, 80, 0.7);
+  --primary-button-hover: rgba(76, 175, 80, 0.9);
+  
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  /* TODO - Set up universal Color Vars */
-  --background: #242424;
-  --primary-text: #fff;
-  --primary-button: rgba(76, 175, 80, 0.7);
-  --primary-button-hover: rgba(76, 175, 80, 0.9);
 }
 
 a {
@@ -74,7 +77,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: var(--primary-text);
   }
   a:hover {
     color: #747bff;
