--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
   --background: #242424;
   --primary-text: #fff;
   --primary-grey: #999;
+  --primary-powder-blue: #357abd;
   --primary-slate: rgba(255, 255, 255, 0.1);
   --primary-button: rgba(76, 175, 80, 0.7);
   --primary-button-hover: rgba(76, 175, 80, 0.9);
